portfolio_pageStyle.css
@import url('https://fonts.googleapis.com/css?family=Montserrat|Varela+Round');

body {
	font-family: 'Montserrat', sans-serif;
	width: 100vw;
    margin: 0;
	background-color: #ffffff;
}

p {
	font-size: 1em;
}

.Banner {
			display: flex;
			background: white;
			height: 15vh;
			width: 100vw;
			flex-direction: row;
			justify-content: space-between;
			align-items: center;
            position: sticky;
            top: 0px;
            z-index: 3;
}

.ContactMe {
			flex: 1 1;
			height: 8vh;
			width: 20vw;
			margin: auto;
			margin: 0;
			padding-left: 2vh;
			font-size: 2.5em;
}

.ContactMe a {
			color: #000000;
			white-space: nowrap;
}

.ContactMe span:hover {
	display: inline-block;
	filter: opacity(25%);
	transform: translate(0.3vw, 0.3vh);
}

.IconLinks {
			flex: 1 1;
			display: flex;
			padding: 0 0 0 2vh;
			flex-direction: row;
			height: 20vh;
			width: 50vw;
			justify-content: flex-end;
			align-items: center;
}

.IconLinks div {
			height: 10vh;
			width: 9vw;
			margin: 5px;

}

a {
	text-decoration:none;
	color:#345a77;
}


main {
	display: flex;
	height: 85vh;
	width: 100vw;
	background:
				linear-gradient(
					rgba(255, 255, 255, 0.5),
					rgba(255, 255, 255, 0.5)
				),
				url('skyline.JPG');
	background-size: cover;
	background-position: 0% 60%;
	justify-content: space-around;
	align-items: center;
	margin: auto;

}

main > div {
	display: flex;
	margin: auto;
	background-size: cover;
	position: relative;
	justify-content: center;
}

main div div {
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
}

main h1 {
 	color: #333333;
	font-size: 4em;
	margin: 5px;
}

h1:hover {
	filter: opacity(25%);
	transform: translate(0.5vw, 0.5vh);
}

svg {
	height: 50px;
}


svg:hover {
	filter: opacity(25%);
	transform: translate(0.5vw, 0.5vh);
}

.ProjectsContainer {
	display: flex;
    flex-direction: row;
	flex-wrap: wrap;
	width: 96vw;
    margin:auto;
    padding: 1vw 1vw;
	justify-content: space-around;
}

.AboutMeShort {
	display: none;
}

.AboutMe {
	width: 100%;
	margin: auto;
	min-width: 300px;
    height: 25vh;
    display: flex;
	background-color: #eeeeee;
    flex-direction: row;
	justify-content: center;
}

aside {
	width: 60%;
	margin: auto;
}

.ProjectsContainer div {
    display: flex;
	justify-content: center;
	align-items: center;

}
.ProjectsContainer div div {
	flex-direction: row;
    display: flex;
    flex-wrap: wrap;
	align-items: center;
    position: relative;
}

.Project1 {
    width: 32vw;
    height: 40vh;
	flex: 1 1;
	margin: 10px;
	background: url('bee.svg');
	background-size: contain;
    background-repeat: no-repeat;
    background-position: center;
	position: relative;
	z-index: 1;
}

.Project1:hover {
	background: linear-gradient(
			rgba(255, 255, 255, 0.75),
			rgba(255, 255, 255, 0.75)
	),
	url('bee.svg');
	background-size: cover;
	background-position: 0% 60%;
    left: 0%;
	z-index: 1;
}

.Project1:hover .P1text {
	display: inline-block;
	width: 100%;
	font-size: 1.4em;
	position: absolute;
	text-align: center;
    margin: auto;
	top: 25%;
	z-index: 2;
}

.P1text {
	display: none;
    width: inherit;
	text-align: center;
}

.Small {
	display: none;
    text-align: center;
	font-size: 1.1em;
	z-index: 2;
}

.Project1:hover .Small {
	display: inline-block;
	width: inherit;
	color: #444444;
	text-align: center;
	position: absolute;
	margin: auto;
	top: 50%;
}

.Project2 {
    width: 32vw;
    height: 40vh;
	flex: 1 1;
	margin: 10px;
	background: url('phone-receiver.svg');
	background-size: contain;
    background-repeat: no-repeat;
    background-position: center;
	position: relative;
	z-index: 1;
}

.Project2:hover {
	background: linear-gradient(
			rgba(255, 255, 255, 0.7),
			rgba(255, 255, 255, 0.7)
	),
	url('phone-receiver.svg');
	background-size: cover;
	background-position: 0% 50%;
    left: 0%;
	z-index: 1;
}

.Project2:hover .P2text {
	display: inline-block;
	width: 100%;
	position: absolute;
	text-align: center;
	top: 25%;
	z-index: 2;
}

.P2text {
	display: none;
	text-align: center;
	font-size: 1.4em;
}

.Project2:hover .Small {
	display: inline-block;
	width: 60%;
	color: #444444;
	text-align: center;
	position: absolute;
	margin: auto;
	left: 25%;
	top: 50%;
}

.Project3 {
    width: 32vw;
    height: 40vh;
	flex: 1 1;
	margin: 10px;
	background: url('bar-chart.svg');
	background-size: contain;
    background-repeat: no-repeat;
    background-position: center;
	position: relative;
	z-index: 1;
}

.Project3:hover {
	background: linear-gradient(
			rgba(255, 255, 255, 0.7),
			rgba(255, 255, 255, 0.7)
	),
	url('bar-chart.svg');
	background-size: cover;
	background-position: 0% 50%;
    left: 0%;
	z-index: 1;
}

.Project3:hover .P3text {
	display: inline-block;
	width: 100%;
	position: absolute;
	text-align: center;
	top: 25%;
	z-index: 2;
}

.P3text {
	display: none;
	text-align: center;
	font-size: 1.4em;
}

.Project3:hover .Small {
	display: inline-block;
	width: 60%;
	color: #444444;
	text-align: center;
	position: absolute;
	margin: auto;
	left: 25%;
	top: 50%;
}

.Project4 {
    width: 32vw;
    height: 40vh;
	flex: 1 1;
	margin: 10px;
	background: url('rainbow.svg');
	background-size: contain;
    background-repeat: no-repeat;
    background-position: center;
	position: relative;
	z-index: 1;
}

.Project4:hover {
	background: linear-gradient(
			rgba(255, 255, 255, 0.7),
			rgba(255, 255, 255, 0.7)
	),
	url('rainbow.svg');
	background-size: cover;
	background-position: 0% 50%;
    left: 0%;
	z-index: 1;
}

.Project4:hover .P4text {
	display: inline-block;
	width: 100%;
	position: absolute;
	text-align: center;
	top: 25%;
	z-index: 2;
}

.P4text {
	display: none;
	text-align: center;
	font-size: 1.4em;
}

.Project4:hover .Small {
	display: inline-block;
	width: 60%;
	color: #444444;
	text-align: center;
	position: absolute;
	margin: auto;
	left: 25%;
	top: 50%;
}

.Project5 {
    width: 32vw;
    height: 40vh;
	flex: 1 1;
	margin: 10px;
	background: url('earthquake.svg');
	background-size: contain;
    background-repeat: no-repeat;
    background-position: center;
	position: relative;
	z-index: 1;
}

.Project5:hover {
	background: linear-gradient(
			rgba(255, 255, 255, 0.7),
			rgba(255, 255, 255, 0.7)
	),
	url('earthquake.svg');
	background-size: cover;
	background-position: 0% 50%;
    left: 0%;
	z-index: 1;
}

.Project5:hover .P5text {
	display: inline-block;
	width: 100%;
	position: absolute;
	text-align: center;
	top: 25%;
	z-index: 2;
}

.P5text {
	display: none;
	text-align: center;
	font-size: 1.4em;
}

.Project5:hover .Small {
	display: inline-block;
	width: 60%;
	color: #444444;
	text-align: center;
	position: absolute;
	margin: auto;
	left: 25%;
	top: 50%;
}

.Project6 {
    width: 32vw;
    height: 40vh;
	flex: 1 1;
	margin: 10px;
	background: url('bus.svg');
	background-size: contain;
    background-repeat: no-repeat;
    background-position: center;
	position: relative;
	z-index: 1;
}

.Project6:hover {
	background: linear-gradient(
			rgba(255, 255, 255, 0.7),
			rgba(255, 255, 255, 0.7)
	),
	url('bus.svg');
	background-size: cover;
	background-position: 0% 50%;
    left: 0%;
	z-index: 1;
}

.Project6:hover .P6text {
	display: inline-block;
	width: 100%;
	position: absolute;
	text-align: center;
	top: 25%;
	z-index: 2;
}

.P6text {
	display: none;
	text-align: center;
	font-size: 1.4em;
}

.Project6:hover .Small {
	display: inline-block;
	width: 60%;
	color: #444444;
	text-align: center;
	position: absolute;
	margin: auto;
	left: 25%;
	top: 50%;
}

footer {
	display: flex;
    padding: 0% 5% 0% 2%;
	flex-direction: row;
	justify-content: space-between;
	background-color: rgb(222, 222, 222);
}

.NameAddress, .Websites {
	font-size: 1.1em;
}

@media screen and (max-width: 900px) {
	.Project1:hover .Small {
		display: none;
	}

	.Project2:hover .Small {
		display: none;
	}
	.Project3:hover .Small{
		display: none;
	}

	.Project4:hover .Small {
		display: none;
	}

	.Project5:hover .Small {
		display: none;
	}

	.Project6:hover .Small {
		display: none;
	}

}

@media screen and (max-width: 500px) {
	.Project1:hover .Small {
		display: none;
	}

	.Project2:hover .Small {
		display: none;
	}

	.Project3:hover .Small {
		display: none;
	}

	.Project4:hover .Small {
		display: none;
	}

	.Project5:hover .Small {
		display: none;
	}

	.Project6:hover .Small {
		display: none;
	}

	.ProjectsContainer {
		flex-direction: column;
	}

	.AboutMe {
		height: unset;
		width: unset;
		text-align: center;
	}

	.Project1 {
		height: 20vh;
		margin: auto;
	}

	.Project2 {
		height: 20vh;
		margin: auto;
	}

	.Project3 {
		height: 20vh;
		margin: auto;
	}

	.Project4 {
		height: 20vh;
		margin: auto;
	}

	.Project5 {
		height: 20vh;
		margin: auto;
	}

	.Project6 {
		height: 20vh;
		margin: auto;
	}

	.IconLinks {
		display: none;
	}
}

